--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Box Dodge</string>
+    <string name="app_name">Block Dodge</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_title">TitleActivity</string>
+    <string name="replay_game_message">TAP TO PLAY AGAIN</string>
 </resources>
